se implemento endpoint para citas
