# backend/index.js
@@ -52,6 +52,7 @@ app.use('/api/auth', require('./src/routes/auth'));
 app.use('/api/users', require('./src/routes/users'));
 app.use('/api/patients', require('./src/routes/patients'));
 app.use('/api/consultas', require('./src/routes/consultas'));
+app.use('/api/appointments', require('./src/routes/appointments'));
 app.use('/api/dashboard', require('./src/routes/dashboard'));
 app.use('/api/auditorias', require('./src/routes/auditorias'));
 
